# wkttool

./: CMakeLists.txt  Makefile  README.md  conanfile.txt  format.sh
include/wkttool/: label_position.h  make_grid.h  parse_geometry.h  point.h  screen_location.h  screen_projection.h  sfml_window_adapter.h  subsample.h  to_drawables.h  to_segments.h  types.h  variant_signal.h
src/: main.cpp
test/: CMakeLists.txt  common.h  test_drawables.cpp  test_label_position.cpp  test_make_grid.cpp  test_parse_geometry.cpp  test_screen_projection.cpp  test_sfml_conversion.cpp  test_subsample.cpp  test_to_segments.cpp  test_variant_signal.cpp
